--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-end-rgb: 255, 253, 253;
+  --primary-color: 9, 115, 27, 1;
+  --secondary-color: 32, 34, 79, 1;
+  --black-color: 60, 63, 64, 1;
+  --gradient-grey: linear-gradient(180deg, #FDFDFD 0%, #F2F2F2 100%);
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -18,6 +25,14 @@
  */
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: rgb(var(--background-end-rg))
+  color: rgb(var(--black-color));
+  background-color: rgb(var(--gradient-grey));
+}
+
+.intro-dots-selectors-wrapper{
+  width: 91px;
+  height: 333.799px;
+  flex-shrink: 0;
+  border-radius: 397px;
+  fill: linear-gradient(180deg, #FDFDFD 0%, #F2F2F2 100%);
 }
