--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,23 +49,27 @@ body {
   flex-shrink: 0;
   border-radius: 0px 24px 24px 24px;
   background: #20224F;
-  text-align: center;
+
   color: #FDFDFD;
-  line-height: 2.6;
+
   font-weight: bold;
+
 }
+
 .customButtonTwo{
-  padding: 10px 30px;
-  border: none;
-  outline: none;
-  position: relative;
-  z-index: 1;
+  width: 142px;
+  height: 45px;
   border-radius: 0px 24px 24px 24px;
   background: var(--gradient-color-accent);
-
+  color: #FDFDFD;
+  font-weight: bold;
+  position: relative;
+  z-index: 1;
 }
 
 .customButtonTwo::before {
+  line-height: 2.6;
+  text-align: center;
   content: "";
   position: absolute;
   left: 1px;
@@ -76,6 +80,41 @@ body {
   background-color: #FDFDFD;
   z-index: -1;
   transition: 200ms
+}
+
+.gcr-rounded-products-wrapper{
+  border-radius: 0px 98px 98px 98px;
+  border: 1px solid #F8F8F8;
+  background: #F8F8F8;
+}
+
+.gcr-rounded-product-wrapper{
+  border-radius: 0px 48px 48px 48px;
+  background: #FFF;
+  box-shadow: 2px 1px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.gcr-products-top-description {
+  color: #272727;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.gcr-products-product-name{
+  color: #20224F;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.gcr-products-product-description{
+  color: #272727;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 /* .customButtonTwo::after {
