--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,6 +81,31 @@ body {
   z-index: -1;
   transition: 200ms
 }
+.customButtonThree{
+  width: 142px;
+  height: 45px;
+  border-radius: 24px 0px 24px 24px;
+  background: var(--gradient-color-accent);
+  color: #FDFDFD;
+  font-weight: bold;
+  position: relative;
+  z-index: 1;
+}
+
+.customButtonThree::before {
+  line-height: 2.6;
+  text-align: center;
+  content: "";
+  position: absolute;
+  left: 1px;
+  right: 1px;
+  top: 1px;
+  bottom: 1px;
+  border-radius: 24px 0px 24px 24px;
+  background-color: #FDFDFD;
+  z-index: -1;
+  transition: 200ms
+}
 
 .gcr-rounded-products-wrapper{
   border-radius: 0px 98px 98px 98px;
