finish the contact us form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,12 +63,10 @@ body {
   flex-shrink: 0;
   border-radius: 0px 24px 24px 24px;
   background: #20224F;
-
   color: #FDFDFD;
-
   font-weight: bold;
-
 }
+
 
 .customButtonTwo{
   width: 142px;
@@ -156,29 +154,42 @@ body {
   line-height: normal;
 }
 
-/* .customButtonTwo::after {
-  content: attr(data);
-  font-size: 16px;
-  background: var(--gradient-color-accent);
-  color: transparent;
-  transition: 200ms;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-} */
-
-/* .customButtonTwo:hover{
-  color: ;
-} */
-
-/* .customButtonTwo:hover::before {
-  opacity: 50%;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  color: white;
-} */
-
 .customButtonTwo:hover::after{
   color: white;
+}
+
+.contactUsForm{
+  border-radius: 0px 33px 33px 33px;
+background: #FFF;
+box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.contactUsInput{
+  border-radius: 14px;
+border: 1px solid #E7E6E6;
+background: #FCFCFC;
+width: 251px;
+height: 45px;
+flex-shrink: 0;
+padding-left: 12px;
+}
+
+.contactUsTeaxtArea{
+  border-radius: 14px;
+  border: 1px solid #E7E6E6;
+  background: #FCFCFC;
+  width: 251px;
+  height: 128px;
+  flex-shrink: 0;
+  padding: 5px 12px;
+}
+
+.customButtonFour{
+  width: 142px;
+  height: 45px;
+  flex-shrink: 0;
+  border-radius: 24px 0px 24px 24px;
+  background: #20224F;
+  color: #FDFDFD;
+  font-weight: bold;
 }
