--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -190,3 +190,7 @@ padding-left: 12px;
   color: #FDFDFD;
   font-weight: bold;
 }
+
+.random-bg {
+  background-color: hsl(calc(360 * var(--random-color)), 70%, 60%);
+}
